<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:gravity="center"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_buzzme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_buzzme_text"
        android:textSize="@dimen/h1_textSize"
        app:layout_constraintBottom_toTopOf="@+id/et_minute_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/et_hour_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/et_hour_hint"
        android:inputType="number"
        android:digits="@string/only_numbers"
        android:textSize="@dimen/timeNum_textSize"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:maxLength="5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_hours_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_hours_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_hour_text"
        android:textSize="@dimen/timeText_textSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_hour_input"
        app:layout_constraintEnd_toStartOf="@+id/et_minute_input"
        app:layout_constraintStart_toEndOf="@+id/et_hour_input" />

    <EditText
        android:id="@+id/et_minute_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:hint="@string/et_minute_hint"
        android:inputType="number"
        android:digits="@string/only_numbers"
        android:textSize="@dimen/timeNum_textSize"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:maxLength="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_minutes_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_hours_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_minutes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_minute_text"
        android:textSize="@dimen/timeText_textSize"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_minute_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et_minute_input" />

    <Button
        android:id="@+id/btn_set_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_set_alarm_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_minute_input" />

</androidx.constraintlayout.widget.ConstraintLayout>
